[tool.poetry]
name = "rate_limiter"
version = "0.1.0"
description = "Token Bucket with Greedy Refiller Rate Limiter and Flask demo"
authors = ["Serhii Shymko <shymkosergey@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "rate_limiter" }]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2"
redis = "^4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"

[tool.poetry.scripts]
ratelimit-demo = "demo.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
